--- a/shopee_project/src/main/resources/application.properties
+++ b/shopee_project/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=shopee_project
 spring.data.mongodb.uri=mongodb://localhost:27017/shopee_db
 spring.data.mongodb.database=shopee_db
 server.port=8081
+
+#AIzaSyABJkHBDYz8nMEWb746yxjIzZGy87Jof5k
+gemini.api.key=AIzaSyABJkHBDYz8nMEWb746yxjIzZGy87Jof5k
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
